--- a/baseFile.ipynb
+++ b/baseFile.ipynb
@@ -21,7 +21,6 @@
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.preprocessing import LabelEncoder\n",
@@ -29,12 +28,10 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.model_selection import StratifiedKFold\n",
     "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn import svm as SVM_MODEL\n",
-    "from sklearn.metrics import confusion_matrix, accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, \\\n",
-    "    roc_curve\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.neighbors import KNeighborsClassifier"
    ]
